--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class = "About-Me-Section">  
     <div class="About-Me-Container">
       <div class = "Profile">
-        <img src="/1. Portfolio/Assets/Images/Profile.jpg" alt="">
+        <img src="/Assets/Images/Profile.jpg" alt="">
       </div>
       <div class="About-Me">
         <h1>About Me</h1>
@@ -83,14 +83,13 @@
       </div>
     </section>
 
-
   </body>
   
   <footer>
     <h2 class = "Section-Title">So<span>cia</span>ls</h2>
     <div class="Socials-Container">
-      <a href="https://www.linkedin.com/in/mannyasante" target = "_blank" ><img src="/1. Portfolio/Assets/Icons/LI-In-Bug.png" alt="LinkedIn Logo" class = "Socials"></a>
-      <a href="https://discordapp.com/users/3778/" target = "_blank"><img src="/1. Portfolio/Assets/Icons/Discord.svg" alt="Discord Logo" class = "Socials"></a>
+      <a href="https://www.linkedin.com/in/mannyasante" target = "_blank" ><img src="/Assets/Icons/LI-In-Bug.png" alt="LinkedIn Logo" class = "Socials"></a>
+      <a href="https://discordapp.com/users/3778/" target = "_blank"><img src="/Assets/Icons/Discord.svg" alt="Discord Logo" class = "Socials"></a>
     </div>
     <div style="display: none;">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </footer>
